--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,13 @@
   --color-song-wave: linear-gradient(to left, #ffffff, #848be6);
   --color-btn-play: white;
   --background-progress-thumb: linear-gradient(to top, #780206, #061161);
-  --main-background: url("https://images.wallpaperscraft.com/image/single/street_night_wet_155637_1920x1080.jpg");
-  --background-dashboard: linear-gradient(to right, #780206,#501113, #061161, #2e08da);
+  --main-background: url("https://trunkey2003.github.io/general-img/first-custom-theme-background.jpg");
+  --background-dashboard: linear-gradient(to right, #780206b6,#501113bd, #061161b7, #2f08dabd);
+  --background-dashboard-mobile: url("https://trunkey2003.github.io/general-img/first-custom-theme-background-mobile-02.jpg");
   --background-song: linear-gradient(
       90deg,
-      rgb(0, 0, 0) 50%,
-      rgb(39, 29, 133) 96%
+      rgba(0, 0, 0, 0.849) 50%,
+      rgba(39, 29, 133, 0.836) 96%
     );
   --color-song: white;
   --background-song-active: linear-gradient(
@@ -77,7 +78,8 @@
       rgb(30, 33, 219)
     );
   --color-option-songs-btn: white;
-  --color-option-songs-btn-hover: rgb(255, 255, 255); }
+  --color-option-songs-btn-hover: rgb(255, 255, 255);
+  --color-control-btn: rgb(173, 171, 171); }
 
 .custom-modal-01 .modal-dialog .modal-content {
   background: var(--background-modal);
@@ -252,6 +254,8 @@ html {
   header h3 {
     color: var(--text-color);
     font-size: 15px; }
+  header h4:hover, header h2:hover, header h3:hover {
+    opacity: 0.8; }
   /* CD */
   .cd {
     display: flex;
@@ -282,7 +286,7 @@ html {
   .btn {
     cursor: pointer; }
   .control .btn {
-    color: #666;
+    color: #c5c4c4;
     padding: 5px;
     font-size: 18px; }
   .control .btn.active {
@@ -300,8 +304,7 @@ html {
     background: var(--background-btn-play);
     border: 0; }
   .control .btn-toggle-play:hover {
-    background-color: #6d0e0e;
-    color: #c0bebe; }
+    opacity: 0.70022003; }
   .progress {
     width: 100%;
     /* -webkit-appearance: none;  */ }
@@ -450,7 +453,7 @@ html {
   .thumbnail .thumbnail-content h5 {
     font-size: 18px; }
   .change-theme-btn:hover {
-    color: #cac6c6;
+    color: #fafafa;
     cursor: pointer; } }
 
 @media (max-width: 1199.999px) {
@@ -466,7 +469,7 @@ html {
     display: none; }
   .dashboard {
     padding: 16px 16px 14px;
-    background: var(--background-dashboard);
+    background: var(--background-dashboard-mobile);
     position: fixed;
     top: 0;
     width: 100%;
@@ -510,7 +513,7 @@ html {
   .btn {
     cursor: pointer; }
   .control .btn {
-    color: #666;
+    color: #adabab;
     padding: 5px;
     font-size: 18px; }
   .control .btn.active {
@@ -537,7 +540,7 @@ html {
   .song {
     display: flex;
     align-items: center;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     background: var(--background-song);
     padding: 8px 16px;
     /* border-bottom: 3px solid transparent;
@@ -600,7 +603,7 @@ html {
   .progress {
     -webkit-appearance: none;
     width: 100%;
-    height: 10px;
+    height: 7px;
     outline: none;
     overflow: visible;
     background-color: white !important;
@@ -641,6 +644,9 @@ html {
   top: 30px;
   display: block; }
 
+.song-wave:hover {
+  opacity: 0.8; }
+
 .song-wave span {
   width: 5px;
   height: 5px;
@@ -677,7 +683,7 @@ html {
   top: 15px;
   right: 13%;
   font-size: 20px;
-  color: #666363; }
+  color: var(--primary-color); }
 
 @keyframes waving {
   0% {
@@ -700,7 +706,7 @@ html {
   --text-color: rgb(255, 255, 255);
   --color-song: white;
   --background-scroll-thumb: #c9c9c9;
-  --primary-color: #be9409;
+  --primary-color: #f4f800;
   --background-btn-play: linear-gradient(to left, #917e13, #2b0c0c);
   --background-scroll-bar: linear-gradient(to top, #917e13, #2b0c0c);
   --background-scroll-bar-hover: linear-gradient(to right, #917e13, #2b0c0c);
@@ -708,8 +714,9 @@ html {
   --color-song-wave: linear-gradient(to left, #917e13, #2b0c0c);
   --background-progress-thumb: #be9409;
   --main-background: url("https://trunkey2003.github.io/general-img/golden.jpg");
-  --background-dashboard: rgb(51, 51, 45);
-  --background-song: rgb(53, 41, 32);
+  --background-dashboard: rgba(51, 51, 45, 0.842);
+  --background-dashboard-mobile: url("https://trunkey2003.github.io/general-img/second-custom-theme-background-mobile.jpg");
+  --background-song: linear-gradient(to right, #000000, #4c501ab9);
   --background-song-active: linear-gradient(to left, #917e13, #2b0c0c);
   --background-song-hover: linear-gradient(to left, #917e13, #2b0c0c);
   --background-modal: linear-gradient(to right, #c2f800, #240b36);
@@ -760,7 +767,8 @@ html {
       rgb(30, 33, 219)
     );
   --color-option-songs-btn: white;
-  --color-option-songs-btn-hover: rgb(255, 255, 255); }
+  --color-option-songs-btn-hover: rgb(255, 255, 255);
+  --color-control-btn: rgb(173, 171, 171); }
 
 .custom-theme-02 {
   --text-color: rgb(255, 255, 255);
@@ -774,8 +782,9 @@ html {
   --color-song-wave: linear-gradient(to left, #911387, #300c31);
   --background-progress-thumb: linear-gradient(to top, #6d0d58, #5c094a, #620fa7);
   --main-background: url("https://i.pinimg.com/originals/81/8a/1b/818a1b56754f8c08591df2d60f3d6d90.jpg");
-  --background-dashboard: linear-gradient(to right, #27041f,#5c094a, #000000);
-  --background-song: linear-gradient(to right, #000000, #44173a, #200e38);
+  --background-dashboard: linear-gradient(to right, #27041f,#5c094aaf, #00000086);
+  --background-dashboard-mobile: url("https://i.pinimg.com/originals/81/8a/1b/818a1b56754f8c08591df2d60f3d6d90.jpg");
+  --background-song: linear-gradient(to right, #000000, #44173aa6, #200e38);
   --background-song-active: linear-gradient(to top, #5c094a, #2b14f8);
   --background-song-hover: linear-gradient(to top, #5c094a, #2b14f8);
   --background-modal: linear-gradient(to right, #c31432, #240b36);
@@ -826,25 +835,27 @@ html {
     rgb(30, 33, 219)
   );
   --color-option-songs-btn: white;
-  --color-option-songs-btn-hover: rgb(255, 255, 255); }
+  --color-option-songs-btn-hover: rgb(255, 255, 255);
+  --color-control-btn: rgb(173, 171, 171); }
 
 .custom-theme-03 {
-  --primary-color: rgb(153, 10, 10);
+  --primary-color: rgb(7, 188, 212);
   --text-color: rgb(255, 255, 255);
   --background-scroll-thumb: #000000;
   --background-scroll-bar: linear-gradient(to left, #200122, #6f0000);
   --background-scroll-bar-hover: linear-gradient(to right, #200122, #6f0000);
-  --background-btn-play: linear-gradient(to bottom, #23074d, #cc5333);
-  --color-song-wave: linear-gradient(to left, #c31432, #240b36);
+  --background-btn-play: linear-gradient(to bottom, #23074d, #33bacc);
+  --color-song-wave: linear-gradient(to left, #14a9c3, #0f0b36);
   --color-btn-play: white;
   --background-progress-thumb: linear-gradient(to top, #780206, #061161);
   --main-background: url("https://images.wallpaperscraft.com/image/single/tunnel_neon_glow_166518_1920x1080.jpg");
-  --background-dashboard: rgb(0, 0, 0);
-  --background-song: #000000;
+  --background-dashboard: rgba(0, 0, 0, 0.781);
+  --background-dashboard-mobile: url("https://images.wallpaperscraft.com/image/single/tunnel_neon_glow_166518_1920x1080.jpg");
+  --background-song: #000000cb;
   --color-song: white;
-  --background-song-active: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
+  --background-song-active: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgb(0, 162, 255) 96%);
   --color-song-active: rgb(255, 255, 255);
-  --background-song-hover: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
+  --background-song-hover: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgb(0, 195, 255) 96%);
   --background-modal: linear-gradient(to right, #c31432, #240b36);
   --color-modal: rgb(255, 255, 255);
   --color-note: rgb(190, 186, 186) ;
@@ -861,4 +872,5 @@ html {
   --background-option-songs-btn: linear-gradient(to right, rgb(218, 132, 132), rgb(130, 131, 238));
   --background-option-songs-btn-hover: linear-gradient(to right, rgb(214, 61, 61), rgb(30, 33, 219));
   --color-option-songs-btn: white;
-  --color-option-songs-btn-hover: rgb(255, 255, 255); }
+  --color-option-songs-btn-hover: rgb(255, 255, 255);
+  --color-control-btn: rgb(173, 171, 171); }
