--- a/src/scss/theme/custom-theme-03.scss
+++ b/src/scss/theme/custom-theme-03.scss
@@ -1,20 +1,21 @@
 .custom-theme-03 {
-  --primary-color: rgb(153, 10, 10);
+  --primary-color: rgb(7, 188, 212);
   --text-color: rgb(255, 255, 255);
   --background-scroll-thumb: #000000; 
   --background-scroll-bar: linear-gradient(to left, #200122, #6f0000);
   --background-scroll-bar-hover: linear-gradient(to right, #200122, #6f0000);
-  --background-btn-play: linear-gradient(to bottom, #23074d, #cc5333);  
-  --color-song-wave: linear-gradient(to left, #c31432, #240b36);
+  --background-btn-play: linear-gradient(to bottom, #23074d, #33bacc);  
+  --color-song-wave: linear-gradient(to left, #14a9c3, #0f0b36);
   --color-btn-play: white;
   --background-progress-thumb: linear-gradient(to top, #780206, #061161);
   --main-background: url("https://images.wallpaperscraft.com/image/single/tunnel_neon_glow_166518_1920x1080.jpg");
-  --background-dashboard: rgb(0, 0, 0);
-  --background-song: #000000;
+  --background-dashboard: rgba(0, 0, 0, 0.781);
+  --background-dashboard-mobile: url("https://images.wallpaperscraft.com/image/single/tunnel_neon_glow_166518_1920x1080.jpg");
+  --background-song: #000000cb;
   --color-song: white;
-  --background-song-active: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
+  --background-song-active: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgb(0, 162, 255) 96%);
   --color-song-active: rgb(255, 255, 255);
-  --background-song-hover: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
+  --background-song-hover: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgb(0, 195, 255) 96%);
   --background-modal: linear-gradient(to right, #c31432, #240b36);;
   --color-modal: rgb(255, 255, 255);
   --color-note: rgb(190, 186, 186) ;
@@ -32,4 +33,5 @@
   --background-option-songs-btn-hover: linear-gradient(to right, rgb(214, 61, 61), rgb(30, 33, 219));
   --color-option-songs-btn: white;
   --color-option-songs-btn-hover: rgb(255, 255, 255);
+  --color-control-btn: rgb(173, 171, 171);
 }
