--- a/src/App.css
+++ b/src/App.css
@@ -781,9 +781,9 @@ html {
   --color-btn-play: rgb(248, 248, 248);
   --color-song-wave: linear-gradient(to left, #911387, #300c31);
   --background-progress-thumb: linear-gradient(to top, #6d0d58, #5c094a, #620fa7);
-  --main-background: url("https://i.pinimg.com/originals/81/8a/1b/818a1b56754f8c08591df2d60f3d6d90.jpg");
+  --main-background: url("https://trunkey2003.github.io/general-img/third-custom-theme-background.jpg");
   --background-dashboard: linear-gradient(to right, #27041f,#5c094aaf, #00000086);
-  --background-dashboard-mobile: url("https://i.pinimg.com/originals/81/8a/1b/818a1b56754f8c08591df2d60f3d6d90.jpg");
+  --background-dashboard-mobile: url("https://trunkey2003.github.io/general-img/third-custom-theme-background.jpg");
   --background-song: linear-gradient(to right, #000000, #44173aa6, #200e38);
   --background-song-active: linear-gradient(to top, #5c094a, #2b14f8);
   --background-song-hover: linear-gradient(to top, #5c094a, #2b14f8);
@@ -848,9 +848,9 @@ html {
   --color-song-wave: linear-gradient(to left, #14a9c3, #0f0b36);
   --color-btn-play: white;
   --background-progress-thumb: linear-gradient(to top, #780206, #061161);
-  --main-background: url("https://images.wallpaperscraft.com/image/single/tunnel_neon_glow_166518_1920x1080.jpg");
+  --main-background: url("https://trunkey2003.github.io/general-img/fourth-custom-theme-background-mobile.jpg");
   --background-dashboard: rgba(0, 0, 0, 0.781);
-  --background-dashboard-mobile: url("https://images.wallpaperscraft.com/image/single/tunnel_neon_glow_166518_1920x1080.jpg");
+  --background-dashboard-mobile: url("https://trunkey2003.github.io/general-img/fourth-custom-theme-background-mobile.jpg");
   --background-song: #000000cb;
   --color-song: white;
   --background-song-active: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgb(0, 162, 255) 96%);
