--- a/src/theme/custom-theme-02.css
+++ b/src/theme/custom-theme-02.css
@@ -9,9 +9,9 @@
   --color-btn-play: rgb(248, 248, 248);
   --color-song-wave: linear-gradient(to left, #911387, #300c31);
   --background-progress-thumb: linear-gradient(to top, #6d0d58, #5c094a, #620fa7);
-  --main-background: url("https://i.pinimg.com/originals/81/8a/1b/818a1b56754f8c08591df2d60f3d6d90.jpg");
+  --main-background: url("https://trunkey2003.github.io/general-img/third-custom-theme-background.jpg");
   --background-dashboard: linear-gradient(to right, #27041f,#5c094aaf, #00000086);
-  --background-dashboard-mobile: url("https://i.pinimg.com/originals/81/8a/1b/818a1b56754f8c08591df2d60f3d6d90.jpg");
+  --background-dashboard-mobile: url("https://trunkey2003.github.io/general-img/third-custom-theme-background.jpg");
   --background-song: linear-gradient(to right, #000000, #44173aa6, #200e38);
   --background-song-active: linear-gradient(to top, #5c094a, #2b14f8);
   --background-song-hover: linear-gradient(to top, #5c094a, #2b14f8);
