--- a/src/theme/custom-theme-03.css
+++ b/src/theme/custom-theme-03.css
@@ -8,9 +8,9 @@
   --color-song-wave: linear-gradient(to left, #14a9c3, #0f0b36);
   --color-btn-play: white;
   --background-progress-thumb: linear-gradient(to top, #780206, #061161);
-  --main-background: url("https://images.wallpaperscraft.com/image/single/tunnel_neon_glow_166518_1920x1080.jpg");
+  --main-background: url("https://trunkey2003.github.io/general-img/fourth-custom-theme-background-mobile.jpg");
   --background-dashboard: rgba(0, 0, 0, 0.781);
-  --background-dashboard-mobile: url("https://images.wallpaperscraft.com/image/single/tunnel_neon_glow_166518_1920x1080.jpg");
+  --background-dashboard-mobile: url("https://trunkey2003.github.io/general-img/fourth-custom-theme-background-mobile.jpg");
   --background-song: #000000cb;
   --color-song: white;
   --background-song-active: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgb(0, 162, 255) 96%);
