Add volume button

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --primary-color: rgb(153, 10, 10);
   --text-color: rgb(255, 255, 255);
@@ -79,7 +80,8 @@
     );
   --color-option-songs-btn: white;
   --color-option-songs-btn-hover: rgb(255, 255, 255);
-  --color-control-btn: rgb(173, 171, 171); }
+  --color-control-btn: rgb(173, 171, 171);
+  width: 100vw; }
 
 .custom-modal-01 .modal-dialog .modal-content {
   background: var(--background-modal);
@@ -222,7 +224,53 @@ html {
 .custom-modal-01 {
   top: 20vh; }
 
+.volume-container {
+  position: absolute;
+  background: var(--background-btn-play);
+  left: 12%;
+  top: 1rem;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%; }
+
+.fa-volume-up {
+  position: absolute;
+  color: white;
+  font-size: 20px;
+  cursor: pointer; }
+
+/*Thiết lập style cho range slider*/
 @media (min-width: 1200px) {
+  .slider {
+    -webkit-appearance: none;
+    width: 200px;
+    height: 7px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    position: absolute;
+    top: 1.3rem;
+    left: calc(35% - 100px);
+    z-index: 5; }
+  /*Thiết kế phần để kéo trượt trong rangerslider -- dùng -webkit- để chạy trên Chrome, Opera, Safari, Edge*/
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: var(--primary-color);
+    cursor: pointer; }
+  /*-moz- dùng để thiết kế rangerslider trên firefox nhé*/
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer; }
   .player {
     display: flex; }
   .player .icon-pause {
@@ -254,7 +302,9 @@ html {
   header h3 {
     color: var(--text-color);
     font-size: 15px; }
-  header h4:hover, header h2:hover, header h3:hover {
+  header h4:hover,
+  header h2:hover,
+  header h3:hover {
     opacity: 0.8; }
   /* CD */
   .cd {
@@ -457,10 +507,41 @@ html {
     cursor: pointer; } }
 
 @media (max-width: 1199.999px) {
+  .slider {
+    -webkit-appearance: none;
+    width: 100px;
+    height: 7px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    position: fixed;
+    top: 1rem;
+    left: calc(50% - 50px);
+    z-index: 5; }
+  /*Thiết kế phần để kéo trượt trong rangerslider -- dùng -webkit- để chạy trên Chrome, Opera, Safari, Edge*/
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: var(--primary-color);
+    cursor: pointer; }
+  /*-moz- dùng để thiết kế rangerslider trên firefox nhé*/
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer; }
   .player {
     position: relative;
-    max-width: 480px;
-    margin: 0 auto; }
+    width: 100vw;
+    left: 0;
+    margin: 0 0; }
   .player .icon-pause {
     display: none; }
   .player.playing .icon-pause {
@@ -471,9 +552,9 @@ html {
     padding: 16px 16px 14px;
     background: var(--background-dashboard-mobile);
     position: fixed;
+    left: 0;
     top: 0;
     width: 100%;
-    max-width: 480px;
     z-index: 1; }
   /* HEADER */
   header {
@@ -681,7 +762,7 @@ html {
 .change-theme-btn {
   position: absolute;
   top: 15px;
-  right: 13%;
+  right: 4rem;
   font-size: 20px;
   color: var(--primary-color); }
 
