--- a/src/scss/theme/defualt-theme.scss
+++ b/src/scss/theme/defualt-theme.scss
@@ -80,4 +80,5 @@
     --color-option-songs-btn: white;
     --color-option-songs-btn-hover: rgb(255, 255, 255);
     --color-control-btn: rgb(173, 171, 171);
+    width: 100vw;
   }
